# ChangeLog for dev-db/libdbi-drivers
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi-drivers/ChangeLog,v 1.42 2009/01/11 15:58:10 maekke Exp $

  11 Jan 2009; Markus Meier <maekke@gentoo.org> libdbi-drivers-0.8.3.ebuild:
  x86 stable, bug #253663

  09 Jan 2009; Brent Baude <ranger@gentoo.org> libdbi-drivers-0.8.3.ebuild:
  Marking libdbi-drivers-0.8.3 ppc for bug 253663

  05 Jan 2009; Jeroen Roovers <jer@gentoo.org> libdbi-drivers-0.8.3.ebuild:
  Stable for HPPA (bug #253663).

  16 Dec 2008; Peter Volkov <pva@gentoo.org> libdbi-drivers-0.8.3.ebuild:
  ~mips keyworded for dictd, bug #245413

  01 Dec 2008; Brent Baude <ranger@gentoo.org> libdbi-drivers-0.8.3.ebuild:
  Marking libdbi-drivers-0.8.3 ~ppc64 for bug 244246

  14 Nov 2008; Raúl Porcel <armin76@gentoo.org>
  libdbi-drivers-0.8.3.ebuild:
  ia64 stable wrt #244246

  09 Nov 2008; Tobias Klausmann <klausman@gentoo.org>
  libdbi-drivers-0.8.3.ebuild:
  Stable on alpha, bug #244246

  09 Nov 2008; Raúl Porcel <armin76@gentoo.org>
  libdbi-drivers-0.8.3.ebuild:
  Add ~alpha/~ia64 wrt #245413

  03 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  libdbi-drivers-0.8.1-r2.ebuild:
  Sparc stable, related to Bug #245413 and to Bug #244246.

  28 Oct 2008; Jeroen Roovers <jer@gentoo.org>
  libdbi-drivers-0.8.1-r2.ebuild:
  Stable for HPPA (bug #240974).

  16 Oct 2008; Markus Meier <maekke@gentoo.org>
  libdbi-drivers-0.8.1-r2.ebuild:
  amd64/x86 stable, bug #240974

  14 Oct 2008; Robin H. Johnson <robbat2@gentoo.org>
  libdbi-drivers-0.8.1-r1.ebuild, libdbi-drivers-0.8.1-r2.ebuild,
  libdbi-drivers-0.8.3.ebuild:
  Disable interactive tests better.

  12 Oct 2008; nixnut <nixnut@gentoo.org> libdbi-drivers-0.8.1-r2.ebuild:
  Stable on ppc wrt bug 240974

  10 Oct 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/libdbi-drivers-0.8.3-doc-build-fix.patch,
  libdbi-drivers-0.8.3.ebuild: