@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/libdbi
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.33 2009/01/17 15:35:14 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.34 2009/01/20 21:55:49 aballier Exp $
+
+  20 Jan 2009; Alexis Ballier <aballier@gentoo.org> libdbi-0.8.3.ebuild:
+  keyword ~x86-fbsd
 
   17 Jan 2009; nixnut <nixnut@gentoo.org> ChangeLog:
   ppc stable #253663
